Brand strategy refinements and visual enhancements: Updated content to benefit-led messaging, normalized spacing and card heights, enhanced text shadows with coreGold, updated hero h1 to 70px and h2 to 40px, changed hero paragraph fonts to Montserrat, updated footer layout, and refined visual presentation

--- a/partials/footer.html
+++ b/partials/footer.html
@@ -4,7 +4,7 @@
             <!-- All Links on Left -->
             <div class="col-6 footer-column">
                 <div class="row">
-                    <div class="col-4">
+                    <div class="col-6">
                         <h5>Bloom'n</h5>
                         <ul class="nav d-flex flex-column row-gap-0">
                             <li class="nav-item"><a class="nav-link text-light" href="index.html">Home</a></li>
@@ -13,20 +13,13 @@
                             <li class="nav-item"><a class="nav-link text-light" href="gallery.html">Gallery</a></li>
                         </ul>
                     </div>
-                    <div class="col-4">
+                    <div class="col-6">
                         <h5>Portfolio</h5>
                         <ul class="nav d-flex flex-column row-gap-0">
                             <li class="nav-item"><a class="nav-link text-light" href="events.html">Events</a></li>
                             <li class="nav-item"><a class="nav-link text-light" href="workshops.html">Workshops</a></li>
                             <li class="nav-item"><a class="nav-link text-light" href="displays.html">Displays</a></li>
                             <li class="nav-item"><a class="nav-link text-light" href="capabilities.html">Our Capabilities</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-4">
-                        <h5>Policies</h5>
-                        <ul class="nav d-flex flex-column row-gap-0">
-                            <li class="nav-item"><a class="nav-link text-light" href="tandcs.html">Terms & Conditions</a></li>
-                            <li class="nav-item"><a class="nav-link text-light" href="policies.html">Company Policies</a></li>
                         </ul>
                     </div>
                 </div>
@@ -36,7 +29,7 @@
             <div class="col-3 text-center footer-column order-md-2">
                 <img src="images/logo-blk.png" alt="Bloom'n Events Co Logo" class="img-fluid footer-logo mb-3" loading="lazy" decoding="async">
                 <p class="text-gold fw-light small mb-0">
-                    Copyright &copy; <span id="current-year"></span> Bloom'n Events Co Pty Ltd. All rights reserved.
+                    <a href="tandcs.html" class="text-gold text-decoration-none">Terms & Conditions</a>  |  <a href="policies.html" class="text-gold text-decoration-none">Company Policies</a>  |  Copyright &copy; <span id="current-year"></span> Bloom'n Events Co Pty Ltd. All rights reserved.
                 </p>
             </div>
             
